# ledger

./: #TODO#  .#TODO  .clang-format  .clang-tidy  .gitconfig  .gitignore  .gitmodules  11.net  20.net  40.net  AUTHORS  CHANGELOG  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTING.md  CTestConfig.cmake  DEBUG_INFO  Dockerfile  Dockerfile_build  Jenkinsfile  LICENSE  Makefile  NOTES  Pipfile  README-docker.md  README.md  TENSOR_REFACTOR  TODO_LIST_SYNERGETIC  VM WISHLIST  WORKSPACE  analyse_metrics.ipynb  apply_style  bazel-fetch-ledger  bazel-genfiles  bazel-out  bazel-testlogs  buildit.sh  ci-image  copy_files.py  (+19 more)
apps/: CMakeLists.txt
apps/beacon/: CMakeLists.txt  main.cpp
apps/chain-tool/: CMakeLists.txt  main.cpp
apps/constellation/: BUILD  CMakeLists.txt  bootstrap_monitor.cpp  bootstrap_monitor.hpp  config_builder.cpp  config_builder.hpp  constants.hpp  constellation.cpp  constellation.hpp  health_check_http_module.hpp  key_generator.cpp  key_generator.hpp  logging_http_module.hpp  main.cpp  manifest_builder.cpp  manifest_builder.hpp  mock_chain.hpp  muddle_status_http_module.cpp  muddle_status_http_module.hpp  open_api_http_module.cpp  open_api_http_module.hpp  settings.cpp  settings.hpp  settings_BACKUP_23766.cpp  settings_BASE_23766.cpp  telemetry_http_module.hpp
apps/contract-mockup/: CMakeLists.txt  byte_array_wrapper.hpp  contract_register.hpp  crypto_rng.hpp  dag_accessor.hpp  dag_node_wrapper.hpp  dummy.hpp  item.hpp  length.hpp  main.cpp  miner.hpp  print.hpp  sqrt.hpp  synergetic_contract.hpp  synergetic_vm_module.hpp  test-contract.etch  test-data.dag  work.hpp  work_register.hpp
apps/demonode/: CMakeLists.txt  demonode.cpp
apps/demoswarm/: commands.txt  runswarm.py  start-eye.sh  start-swarm.sh
apps/dkg/: CMakeLists.txt  main.cpp
apps/dmlf-muddle-chatter/: CMakeLists.txt  launcher.py  main.cpp
apps/etch/: CMakeLists.txt  main.cpp
apps/miner/: CMakeLists.txt  detached_miner.cpp
apps/mobi_challenge/: CMakeLists.txt  datum.hpp  depot.hpp  main.cpp  miner.hpp  osm_handler.hpp  target.hpp  vehicle.hpp  world.hpp
apps/muddle-dmlf-chatter/: CMakeLists.txt  launcher.py  main.cpp
apps/muddle-node/: CMakeLists.txt  main.cpp
apps/muddle-probe/: CMakeLists.txt  main.cpp
apps/muddle-test-network/: CMakeLists.txt  main.cpp
apps/muddlescope/: CMakeLists.txt  main.cpp  scope_client.cpp  scope_client.hpp
apps/nebula/: CMakeLists.txt  main.cpp
apps/oef-core/: CMakeLists.txt  MtCore.cpp  MtCore.hpp  config.json  main.cpp
apps/oef-search/: CMakeLists.txt  MtSearch.cpp  MtSearch.hpp  config.json  main.cpp
apps/pyfetch/: CMakeLists.txt  pychainnode-original.py  pychainnode.py  pyfetch.cpp  pynode.py  testrun.sh
apps/random-beacon/: CMakeLists.txt  main.cpp
apps/storage-tools/: CMakeLists.txt  blk_ctl.cpp  block_storage_client.cpp  block_storage_client.hpp  block_storage_tool.cpp  block_storage_tool.hpp  tx_ctl.cpp  tx_gen.cpp  tx_storage_client.cpp  tx_storage_client.hpp  tx_storage_tool.cpp  tx_storage_tool.hpp  wait_for_connections.hpp
apps/swarm/: CMakeLists.txt  logwatching.py  pants.ini  runswarm.py  swarm_agent_api_impl.hpp  swarm_agent_naive.hpp  swarm_http_interface.hpp  swarm_parcel.hpp  swarm_parcel_node.hpp  swarm_parcel_protocol.hpp  swarmnode.cpp
apps/tx/: CMakeLists.txt  main.cpp  sample_priv_keys_0.json  sample_priv_keys_1.json  sample_priv_keys_2.json  sample_tx_0.json  sample_tx_1.json
apps/tx-generator/: CMakeLists.txt  main.cpp
apps/vm-lang/: CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt
benchmark/json/: document.cpp
benchmark/network/: network_benchmark.cpp  node_directory.hpp
benchmark/rpc/: localhost.cpp  main.cpp  main_push.cpp  remote.cpp
benchmark/serialization/: main.cpp
examples/: CMakeLists.txt
examples/advanced_rpc/: aea.cpp  aea_functionality.hpp  aea_protocol.hpp  commands.hpp  node_functionality.hpp  node_protocol.hpp  vector_serialize.hpp
examples/http/: fake_oef.cpp  server.cpp
examples/network/: client.cpp  client_destructing.cpp  server.cpp  tcp_server_echo.cpp
examples/network_benchmark/: http_interface.hpp  network_benchmark.cpp  network_benchmark_service.hpp  network_classes.hpp  network_functions.hpp  node.hpp  node_basic.hpp  node_directory.hpp  packet_filter.hpp  transaction_list.hpp
examples/oef/: README.md  alt_oef_config.txt  default_oef_config.txt  oef_client.cpp  oef_client_requestor.cpp  oef_client_requestor_multi.cpp  oef_server.cpp  oef_service_consts.hpp  schema.cpp
examples/optimisation/: chain_optimiser.cpp  simulated_annealing_reference.cpp
examples/reverse_rpc/: #service_consts.hpp#  client.cpp  server.cpp
examples/rpc/: #server.cpp#  .#server.cpp  client.cpp  rpc_consts.hpp  server.cpp  service_consts.hpp
examples/script/: calculator.cpp
examples/serialization/: serialize_benchmark.cpp
libfetchcore/: CMakeLists.txt  __init__.py
libfetchcore/byte_array/: byte_array.py
libfetchcore/include/: fetch_pybind.hpp  py_abstract_mutex.hpp  py_assert.hpp  py_logger.hpp  py_mutex.hpp  py_protocols.hpp  py_unittest.hpp  type.hpp
libfetchcore/network/: tcp_client.py
libfetchcore/serializer/: byte_array_buffer.py
libfetchcore/src/: example.cpp  main.cpp
libs/address/: BUILD  CMakeLists.txt
libs/agentapi/: CMakeLists.txt
libs/auctions/: CMakeLists.txt
libs/bazel_test/: BUILD  CMakeLists.txt
libs/beacon/: BUILD  CMakeLists.txt
libs/bloom-filter/: BUILD  CMakeLists.txt
libs/chain/: CMakeLists.txt
libs/constellation/: CMakeLists.txt
libs/core/: BUILD  CMakeLists.txt
libs/crypto/: BUILD  CMakeLists.txt  CMakeLists_BACKUP_33257.txt
libs/dkg/: BUILD  CMakeLists.txt
tests/: CMakeLists.txt
tests/byte_array/: encode_decode.cpp  referenced_byte_array.cpp  referenced_byte_array_thread_safety.cpp
tests/chain/: transaction_serialization.cpp
tests/crypto/: bignumber.cpp  ecdsa.cpp  sha256.cpp
tests/image/: load_image_read_exceptions.cpp
tests/include/: helper_functions.hpp
tests/linking/: #file2.cpp#  allfiles.hpp  file1.cpp  file2.cpp
tests/math/: bignumber.cpp  test_exp.cpp  test_spline.cpp
(+6157 files in other folders)
