################################################################################
# F E T C H   A P P S
################################################################################
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(fetch-apps)

add_subdirectory(contract-mockup)
add_subdirectory(miner)
add_subdirectory(constellation)
add_subdirectory(tx)
add_subdirectory(vm-lang)
