#
# F E T C H   A P P S
#
cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(fetch-apps)

add_subdirectory(constellation)
add_subdirectory(etch)
add_subdirectory(muddle-dmlf-chatter)
add_subdirectory(tx-generator)
add_subdirectory(beacon)
add_subdirectory(muddle-node)
add_subdirectory(chain-tool)
